# indoors-test-task

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.postman/: resources.yaml
backend/: Dockerfile  conftest.py
backend/api/: permissions.py  urls.py
backend/cats/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/cats/migrations/: 0001_initial.py  0002_alter_cat_options_alter_cat_fluffiness.py
backend/cats/tests/: test_api.py  test_permissions.py  test_validators.py
backend/chat/: admin.py  consumers.py  middleware.py  models.py  serializers.py  services.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/chat/tests/: test_messages_api.py  test_services.py
backend/config/: asgi.py  settings.py
backend/users/: serializers.py  urls.py  views.py
backend/users/tests/: test_jwt.py  test_registration.py
frontend/: Dockerfile
frontend/src/: styles.css
frontend/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.ts
frontend/src/app/core/services/: auth.interceptor.ts  auth.service.ts  cat.service.ts  message.service.ts  websocket.service.ts
frontend/src/app/pages/cats/: cats.component.css  cats.component.html  cats.component.ts
frontend/src/app/pages/login/: login.component.css  login.component.html  (+1 more)
postman/collections/indoors-test-task/: {{BASE_URL}}-auth-register-.request.yaml  {{BASE_URL}}-auth-token-.request.yaml
postman/collections/indoors-test-task/.resources/: definition.yaml
postman/environments/: Local.environment.yaml
(+6 files in other folders)
